--- a/Pipfile
+++ b/Pipfile
@@ -15,8 +15,8 @@ flask-cors = "*"
 functools = "*"
 boto3 = "*"
 getmac = "*"
-psycopg = "*"
 psycopg2-binary = "*"
+psycopg2 = "*"
 
 [requires]
 python_version = "3.7"
