--- a/Pipfile
+++ b/Pipfile
@@ -17,6 +17,10 @@ getmac = "*"
 psycopg2-binary = "*"
 psycopg2 = "*"
 gunicorn = "*"
+flask-mail = "*"
+jwt = "*"
+werkzeug = "*"
+itsdangerous = "*"
 
 [requires]
 python_version = "3.7"
